# chat-system

./: .gitignore  README.md
client/: CMakeLists.txt
client/src/: chatlist.cpp  chatlist.h  chatview.cpp  chatview.h  loginwindow.cpp  loginwindow.h  main.cpp  mainwindow.cpp  mainwindow.h  networkclient.cpp  networkclient.h
server/: CMakeLists.txt
server/include/: db.h  server.h  sha256.h
server/src/: db.cpp  main.cpp  server.cpp  sha256.cpp
